--- a/app/src/main/res/values-de/edit_access_pin.xml
+++ b/app/src/main/res/values-de/edit_access_pin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_info_edit_access_pin">Die Zugangsnummer muss 4 Ziffern enthalten und verfügt über die Funktionalität, dass die Anwendung bei jeder Eingabe entsperrt werden kann. Diese Zugangsnummer unterscheidet sich vom Passwort.</string>
+    <string name="text_info_edit_access_pin">Der Stift Zugriff angefordert wird nach Ablauf der eingestellten Zeit, und die App im Hintergrund.</string>
     <string name="text_old_access_pin">Alter Zugangsstift</string>
     <string name="text_new_access_pin">Neue Zugangsnadel</string>
     <string name="text_access_pin_not_correspond">Access Pin Nicht zutreffend</string>
