--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -51,8 +51,8 @@
     <string name="text_status_limit">4 benutzerdefinierte Zustände sind erlaubt; Entfernt eine vorher gespeicherte neue hinzuzufügen</string>
     <string name="text_preview_my_message">Hallo</string>
     <string name="text_preview_incoming_message">Hallo, wie geht es dir</string>
-    <string name="text_display_name">Anzeigename</string>
-    <string name="text_nickname_not_contain_enough_char">Der Spitzname muss mindestens 5 Zeichen enthalten.</string>
+    <string name="text_display_name">Anzeigename (optional)</string>
+    <string name="text_nickname_not_contain_enough_char">Der Spitzname muss mindestens 2 Zeichen enthalten.</string>
     <string name="text_empty_state_conversation_title">Starten Sie ein Gespräch</string>
     <string name="text_empty_state_conversation_description">Chatten Sie mit Ihren Freunden und teilen Sie sie auf sichere und private Weise</string>
     <string name="text_empty_state_friendship_title">Freundschaftsanfragen</string>
