--- a/app/src/main/res/values-es/edit_access_pin.xml
+++ b/app/src/main/res/values-es/edit_access_pin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_info_edit_access_pin">El pin de acceso debe contener 4 números y tiene como funcionalidad permitir el desbloqueo de la aplicación cada vez que ingrese a esta. Este pin de acceso es diferente a la contraseña.</string>
+    <string name="text_info_edit_access_pin">El pin de acceso es solicitado después de transcurrido el tiempo seleccionado, y la app se encuentre en segundo plano.</string>
     <string name="text_old_access_pin">Pin de acceso antiguo</string>
     <string name="text_new_access_pin">Nuevo pin de acceso</string>
     <string name="text_access_pin_not_correspond">Pin de acceso no corresponde</string>
