--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -50,8 +50,8 @@
     <string name="text_status_limit">Se permiten 4 estados personalizados; Elimina uno previamente almacenado para agregar uno nuevo</string>
     <string name="text_preview_my_message">Hola</string>
     <string name="text_preview_incoming_message">Hola, ¿Cómo estás?</string>
-    <string name="text_display_name">Nombre a mostrar</string>
-    <string name="text_nickname_not_contain_enough_char">El apodo debe contener mínimo 5 caracteres.</string>
+    <string name="text_display_name">Nombre a mostrar (opcional)</string>
+    <string name="text_nickname_not_contain_enough_char">El apodo debe contener mínimo 2 caracteres.</string>
     <string name="text_empty_state_conversation_title">Inicia una conversación</string>
     <string name="text_empty_state_conversation_description">Conversa con tus amigos y comparte con ellos de una manera segura y privada</string>
     <string name="text_empty_state_friendship_title">Solicitudes de amistad</string>
