--- a/app/src/main/res/values-fr/edit_access_pin.xml
+++ b/app/src/main/res/values-fr/edit_access_pin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_info_edit_access_pin">La broche d\'accès doit contenir 4 chiffres et possède la fonctionnalité permettant de déverrouiller l\'application à chaque fois que vous la saisissez. Cette broche d\'accès est différente du mot de passe.</string>
+    <string name="text_info_edit_access_pin">L\'accès à la broche est demandé une fois le temps écoulé, et l\'application est en arrière-plan.</string>
     <string name="text_old_access_pin">Ancienne broche d\'accès</string>
     <string name="text_new_access_pin">Nouvelle broche d\'accès</string>
     <string name="text_access_pin_not_correspond">Broche d\'accès non applicable</string>
