--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -51,8 +51,8 @@
     <string name="text_status_limit">4 états personnalisés sont autorisés; Supprime une précédemment stockée pour ajouter un nouveau</string>
     <string name="text_preview_my_message">Salut</string>
     <string name="text_preview_incoming_message">Bonjour, comment allez-vous?</string>
-    <string name="text_display_name">Nom d\'affichage</string>
-    <string name="text_nickname_not_contain_enough_char">Le surnom doit contenir au moins 5 caractères.</string>
+    <string name="text_display_name">Affichage du nom (en option)</string>
+    <string name="text_nickname_not_contain_enough_char">Le surnom doit contenir au moins 2 caractères.</string>
     <string name="text_empty_state_conversation_title">Démarrer une conversation</string>
     <string name="text_empty_state_conversation_description">Discuter avec vos amis et partager avec eux de manière sûre et privée</string>
     <string name="text_empty_state_friendship_title">Demandes d\'amis</string>
