--- a/app/src/main/res/values-it/edit_access_pin.xml
+++ b/app/src/main/res/values-it/edit_access_pin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_info_edit_access_pin">Il pin di accesso deve contenere 4 numeri e ha la funzionalità per consentire all\'applicazione di essere sbloccata ogni volta che la si inserisce. Questo pin di accesso è diverso dalla password.</string>
+    <string name="text_info_edit_access_pin">L\'accesso perno è richiesto dopo il tempo selezionato trascorso, e l\'applicazione è in background.</string>
     <string name="text_old_access_pin">Vecchio pin di accesso</string>
     <string name="text_new_access_pin">Nuovo pin di accesso</string>
     <string name="text_access_pin_not_correspond">Pin di accesso non applicabile</string>
