--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -51,8 +51,8 @@
     <string name="text_status_limit">4 stati personalizzati sono consentiti; Rimuove un precedentemente memorizzati per aggiungere uno nuovo</string>
     <string name="text_preview_my_message">Ciao</string>
     <string name="text_preview_incoming_message">Ciao come stai</string>
-    <string name="text_display_name">Nome visualizzato</string>
-    <string name="text_nickname_not_contain_enough_char">Il nickname deve contenere almeno 5 caratteri.</string>
+    <string name="text_display_name">Nome visualizzato (opzionale)</string>
+    <string name="text_nickname_not_contain_enough_char">Il nickname deve contenere almeno 2 caratteri.</string>
     <string name="text_empty_state_conversation_title">Inizia una conversazione</string>
     <string name="text_empty_state_conversation_description">Chattare con i tuoi amici e condividere con loro in modo sicuro e privato</string>
     <string name="text_empty_state_friendship_title">Richieste di amicizia</string>
