--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -51,8 +51,8 @@
     <string name="text_status_limit">4 estados personalizados são permitidos; Remove uma previamente armazenada para adicionar um novo</string>
     <string name="text_preview_my_message">Ola</string>
     <string name="text_preview_incoming_message">Oi, como vai?</string>
-    <string name="text_display_name">Nome de exibição</string>
-    <string name="text_nickname_not_contain_enough_char">O apelido deve conter pelo menos 5 caracteres.</string>
+    <string name="text_display_name">Display Name (Opcional)</string>
+    <string name="text_nickname_not_contain_enough_char">O apelido deve conter pelo menos 2 caracteres.</string>
     <string name="text_empty_state_conversation_title">Iniciar uma conversa</string>
     <string name="text_empty_state_conversation_description">Converse com seus amigos e compartilhe com eles de forma segura e privada</string>
     <string name="text_empty_state_friendship_title">Pedidos de amizade</string>
