--- a/app/src/main/res/values/edit_access_pin.xml
+++ b/app/src/main/res/values/edit_access_pin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_info_edit_access_pin">The access pin must contain 4 numbers and its functionality allows the application to be unlocked every time you enter it. This access pin is different from the password.</string>
+    <string name="text_info_edit_access_pin">The pin access is requested after the selected time elapsed, and the app is in the background.</string>
     <string name="text_old_access_pin">Old access pin</string>
     <string name="text_new_access_pin">New access pin</string>
     <string name="text_access_pin_not_correspond">Access pin doesn\'t correspond</string>
