--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -8,6 +8,7 @@
     <string name="default_notification_channel_id" translatable="false">Default channel</string>
     <string name="okay" translatable="false">OK</string>
     <string name="only_letters_and_numbers" translatable="false">abcdefghijklmnopqrstuvwxyz0123456789</string>
+    <string name="only_letters_upper_case_and_numbers" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
     <string name="only_numbers" translatable="false">0123456789</string>
     <string name="only_letters" translatable="false">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ abcdefghijklmnñopqrstuvwxyz</string>
     <string name="text_napoleon_secret_chat" translatable="false">NapoleoN Secret Chat</string>
@@ -67,8 +68,8 @@
     <string name="text_preview_date_message" translatable="false">20/04/2020 10:34 p. m.</string>
     <string name="text_preview_my_message">Hi</string>
     <string name="text_preview_incoming_message">Hi, how are you?</string>
-    <string name="text_display_name">Display name</string>
-    <string name="text_nickname_not_contain_enough_char">The nickname must contain at least 5 characters.</string>
+    <string name="text_display_name">Display Name (Optional)</string>
+    <string name="text_nickname_not_contain_enough_char">The nickname must contain at least 2 characters.</string>
     <string name="text_empty_state_conversation_title">Start a conversation</string>
     <string name="text_empty_state_conversation_description">Chat with your friends and share with them in a safe and private way</string>
     <string name="text_empty_state_friendship_title">Friend requests</string>
