--- a/app/src/main/res/layout/logo_napoleon_blur.xml
+++ b/app/src/main/res/layout/logo_napoleon_blur.xml
@@ -12,8 +12,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageView_background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         custom:callBackground="@{contact}"
         tools:showIn="@layout/activity_conversation_call"
         tools:src="@drawable/logo_napoleon_app_blur" />
