--- a/app/src/main/res/values-es/time_access_pin.xml
+++ b/app/src/main/res/values-es/time_access_pin.xml
@@ -8,5 +8,5 @@
     <string name="text_one_hour">1 hora</string>
     <string name="text_one_day">1 día</string>
     <string name="text_never">Nunca</string>
-    <string name="text_desc_pin_locked_time">El Pin de Acceso es solicitado despues de transcurrido el tiempo seleccionado y la App se encuentre en segundo plano</string>
+    <string name="text_desc_pin_locked_time">El Pin de Acceso es solicitado después de trascurrido el tiempo seleccionado y la aplicación se encuentre cerrada o en segundo plano.</string>
 </resources>
