--- a/app/src/main/res/values-pt/register.xml
+++ b/app/src/main/res/values-pt/register.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_terms_and_conditions_line_one">Ao clicar em Registro, você aceita o</string>
+    <string name="text_terms_and_conditions_line_one">Para fazer com que o clique Em seguida, aceitar o</string>
     <string name="text_terms_and_conditions_line_two">termos, condições e políticas de privacidade.</string>
     <string name="text_nickname_required">O apelido é obrigatório.</string>
     <string name="text_nickname_must_not_contain_space">Não pode conter espaços em branco</string>
     <string name="text_cant_contain_special_characters">Não pode conter caracteres especiais</string>
     <string name="text_nickname_contain_at_least_one_number">Ele deve conter pelo menos um número</string>
+    <string name="text_nickname_not_contain_enough_char_and_number">O apelido deve conter, pelo menos, quatro caracteres e um número</string>
+    <string name="text_nickname_contain_at_least_one_letter">O apelido deve conter no uma letra menos</string>
 </resources>
