--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,7 @@
     <!--   Cold Ocean-->
     <color name="color_20202E">#20202e</color>
     <color name="color_2A2C45">#2a2c45</color>
+    <color name="color_B1B0CF">#B1B0CF</color>
     <color name="color_802A2C45">#802a2c45</color>
     <color name="color_01001E">#01001e</color>
     <color name="color_545570">#545570</color>
