--- a/app/src/main/res/layout/color_scheme_fragment.xml
+++ b/app/src/main/res/layout/color_scheme_fragment.xml
@@ -16,121 +16,128 @@
         android:layout_height="match_parent"
         tools:context=".ui.colorScheme.ColorSchemeFragment">
 
-        <ScrollView
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageView_theme_preview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:previewTheme="@{viewModel.theme}"
+                tools:src="@drawable/theme_dark_napoleon" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/imageView_theme_preview"
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:previewTheme="@{viewModel.theme}"
-                    tools:src="@drawable/theme_dark_napoleon" />
-
-                <TextView
-                    android:id="@+id/text_section_system_themes"
-                    style="@style/SmallBodyTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:background="?attr/attrBackgroundSectionColor"
-                    android:inputType="textCapCharacters"
-                    android:padding="@dimen/small_padding"
-                    android:text="@string/text_section_system_themes"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView_theme_preview"
-                    tools:ignore="TextViewEdits" />
-
-                <RadioGroup
-                    android:id="@+id/radioGroup_theme"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_section_system_themes">
-
-                    <RadioButton
-                        android:id="@+id/radioButton_light_napoleon"
-                        style="@style/RadioButtonTheme"
-                        android:text="@string/text_theme_light_napoleon" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton_dark_napoleon"
-                        style="@style/RadioButtonTheme"
-                        android:text="@string/text_theme_dark_napoleon" />
+                    android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/text_section_dark_themes"
+                        android:id="@+id/text_section_system_themes"
                         style="@style/SmallBodyTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
                         android:background="?attr/attrBackgroundSectionColor"
                         android:inputType="textCapCharacters"
                         android:padding="@dimen/small_padding"
-                        android:text="@string/text_section_dark_themes"
+                        android:text="@string/text_section_system_themes"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+                        app:layout_constraintTop_toBottomOf="@+id/imageView_theme_preview"
                         tools:ignore="TextViewEdits" />
 
-                    <RadioButton
-                        android:id="@+id/radioButton_black_gold_alloy"
-                        style="@style/RadioButtonTheme"
-                        android:text="@string/text_theme_black_gold_alloy" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton_cold_ocean"
-                        style="@style/RadioButtonTheme"
-                        android:text="@string/text_theme_cold_ocean" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton_camouflage"
-                        style="@style/RadioButtonTheme"
-                        android:text="@string/text_theme_camouflage" />
-
-                    <TextView
-                        android:id="@+id/text_section_light_themes"
-                        style="@style/SmallBodyTextView"
+                    <RadioGroup
+                        android:id="@+id/radioGroup_theme"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/attrBackgroundSectionColor"
-                        android:inputType="textCapCharacters"
-                        android:padding="@dimen/small_padding"
-                        android:text="@string/text_section_light_themes"
+                        android:layout_height="match_parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
-                        tools:ignore="TextViewEdits" />
+                        app:layout_constraintTop_toBottomOf="@+id/text_section_system_themes">
 
-                    <RadioButton
-                        android:id="@+id/radioButton_purple_bluebonnets"
-                        style="@style/RadioButtonTheme"
-                        android:text="@string/text_theme_purple_bluebonnets" />
+                        <RadioButton
+                            android:id="@+id/radioButton_light_napoleon"
+                            style="@style/RadioButtonTheme"
+                            android:text="@string/text_theme_light_napoleon" />
 
-                    <RadioButton
-                        android:id="@+id/radioButton_pink_dream"
-                        style="@style/RadioButtonTheme"
-                        android:text="@string/text_theme_pink_dream" />
+                        <RadioButton
+                            android:id="@+id/radioButton_dark_napoleon"
+                            style="@style/RadioButtonTheme"
+                            android:text="@string/text_theme_dark_napoleon" />
 
-                    <RadioButton
-                        android:id="@+id/radioButton_clear_sky"
-                        style="@style/RadioButtonTheme"
-                        android:text="@string/text_theme_clear_sky" />
+                        <TextView
+                            android:id="@+id/text_section_dark_themes"
+                            style="@style/SmallBodyTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/attrBackgroundSectionColor"
+                            android:inputType="textCapCharacters"
+                            android:padding="@dimen/small_padding"
+                            android:text="@string/text_section_dark_themes"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+                            tools:ignore="TextViewEdits" />
 
-                </RadioGroup>
+                        <RadioButton
+                            android:id="@+id/radioButton_black_gold_alloy"
+                            style="@style/RadioButtonTheme"
+                            android:text="@string/text_theme_black_gold_alloy" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                        <RadioButton
+                            android:id="@+id/radioButton_cold_ocean"
+                            style="@style/RadioButtonTheme"
+                            android:text="@string/text_theme_cold_ocean" />
 
-        </ScrollView>
+                        <RadioButton
+                            android:id="@+id/radioButton_camouflage"
+                            style="@style/RadioButtonTheme"
+                            android:text="@string/text_theme_camouflage" />
+
+                        <TextView
+                            android:id="@+id/text_section_light_themes"
+                            style="@style/SmallBodyTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/attrBackgroundSectionColor"
+                            android:inputType="textCapCharacters"
+                            android:padding="@dimen/small_padding"
+                            android:text="@string/text_section_light_themes"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+                            tools:ignore="TextViewEdits" />
+
+                        <RadioButton
+                            android:id="@+id/radioButton_purple_bluebonnets"
+                            style="@style/RadioButtonTheme"
+                            android:text="@string/text_theme_purple_bluebonnets" />
+
+                        <RadioButton
+                            android:id="@+id/radioButton_pink_dream"
+                            style="@style/RadioButtonTheme"
+                            android:text="@string/text_theme_pink_dream" />
+
+                        <RadioButton
+                            android:id="@+id/radioButton_clear_sky"
+                            style="@style/RadioButtonTheme"
+                            android:text="@string/text_theme_clear_sky" />
+
+                    </RadioGroup>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </ScrollView>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
