--- a/app/src/main/res/layout/register_recovery_account_question_fragment.xml
+++ b/app/src/main/res/layout/register_recovery_account_question_fragment.xml
@@ -51,7 +51,7 @@
                     app:layout_constraintHeight_percent="0.3"
                     app:layout_constraintStart_toStartOf="@id/guideline_start"
                     app:layout_constraintTop_toTopOf="@id/guideline_top"
-                    app:srcCompat="@drawable/image_register_recovery_account" />
+                    app:srcCompat="?attr/attrImageEmptyStateInfoRecovery" />
 
                 <TextView
                     android:id="@+id/textView_description"
