--- a/app/src/main/res/layout/self_destruct_time_message_not_sent_dialog_fragment.xml
+++ b/app/src/main/res/layout/self_destruct_time_message_not_sent_dialog_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/x_large_padding"
                     android:paddingEnd="0dp"
-                    android:text="24 horas!!" />
+                    android:text="@string/text_twentyfour_hours" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radioButton_seven_days_destruct_message"
@@ -67,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/x_large_padding"
                     android:paddingEnd="0dp"
-                    android:text="7 días!!" />
+                    android:text="@string/text_every_seven_days" />
 
             </RadioGroup>
 
