--- a/app/src/main/res/values-de/access_pin.xml
+++ b/app/src/main/res/values-de/access_pin.xml
@@ -6,4 +6,5 @@
     <string name="text_confirm_pin_access_required">Sie müssen die Zugangsnummer bestätigen</string>
     <string name="text_access_pin_not_match">Der Zugriffsstift stimmt nicht überein</string>
     <string name="text_access_pin_length">Die Zugangsnummer muss 4 Ziffern enthalten</string>
+    <string name="text_reset_access_pin_title">Pin Reset-Zugang</string>
 </resources>
