--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -52,7 +52,7 @@
     <string name="text_preview_my_message">Hallo</string>
     <string name="text_preview_incoming_message">Hallo, wie geht es dir</string>
     <string name="text_display_name">Anzeigename (optional)</string>
-    <string name="text_nickname_not_contain_enough_char">Der Spitzname muss mindestens 2 Zeichen enthalten.</string>
+    <string name="text_nickname_not_contain_enough_char">Der Spitzname muss mindestens 5 Zeichen enthalten.</string>
     <string name="text_empty_state_conversation_title">Starten Sie ein Gespräch</string>
     <string name="text_empty_state_conversation_description">Kommunizieren Sie mit Ihren Kontakten in einer sicheren und privaten Weise</string>
     <string name="text_empty_state_friendship_title">Freundschaftsanfragen</string>
@@ -69,4 +69,6 @@
     <string name="text_update_message">Version %1$s ist jetzt im App Store erhältlich</string>
     <string name="text_update">Aktualisieren</string>
     <string name="text_explanation_camera_to_receive_calls">NapoleoN muss Zugriff auf die Kamera und das Mikrofon um Anrufe tätigen und empfangen</string>
+    <string name="text_twentyfour_hours">24 Stunden</string>
+    <string name="text_access">ZUGRIFF</string>
 </resources>
