--- a/app/src/main/res/values-de/register.xml
+++ b/app/src/main/res/values-de/register.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_terms_and_conditions_line_one">Mit einem Klick auf Registrierung akzeptieren Sie die</string>
+    <string name="text_terms_and_conditions_line_one">Um den Klick Weiter zu machen, nehmen die</string>
     <string name="text_terms_and_conditions_line_two">Allgemeine Geschäftsbedingungen und Datenschutzbestimmungen.</string>
     <string name="text_nickname_required">Spitzname ist erforderlich</string>
     <string name="text_nickname_must_not_contain_space">Es darf keine Leerzeichen enthalten</string>
     <string name="text_cant_contain_special_characters">Darf keine Sonderzeichen enthalten</string>
     <string name="text_nickname_contain_at_least_one_number">Es muss mindestens eine Zahl enthalten</string>
+    <string name="text_nickname_not_contain_enough_char_and_number">Der Spitzname muss mindestens vier Zeichen lang sein und eine Zahl</string>
+    <string name="text_nickname_contain_at_least_one_letter">Der Spitzname muss an dem mindestens einen Buchstaben enthält</string>
 </resources>
