--- a/app/src/main/res/values-de/security_settings.xml
+++ b/app/src/main/res/values-de/security_settings.xml
@@ -8,5 +8,6 @@
     <string name="text_account_recovery_information">Informationen zur Kontowiederherstellung</string>
     <string name="text_allow_download_attachments">Zulassen, dass Download-Anhänge gesendet werden</string>
     <string name="text_unlock_options">Optionen freischalten</string>
-    <string name="text_message_self_destruct_time_not_send">Nachrichten Selbstzerstörungs Zeit gescheitert</string>
+    <string name="text_message_self_destruct_time_not_send">Destruct Zeit und ungelesene Nachrichten fehlgeschlagen</string>
+    <string name="text_conversation">KONVERSATION</string>
 </resources>
