--- a/app/src/main/res/values-es/access_pin.xml
+++ b/app/src/main/res/values-es/access_pin.xml
@@ -5,5 +5,6 @@
     <string name="text_access_pin_required">El pin de acceso no puede estar vacío</string>
     <string name="text_confirm_pin_access_required">Debes confirmar el pin de acceso</string>
     <string name="text_access_pin_not_match">El pin de acceso no coincide</string>
-    <string name="text_access_pin_length">El pin de acceso debe contener 4 número</string>
+    <string name="text_access_pin_length">El pin de acceso debe contener 4 números</string>
+    <string name="text_reset_access_pin_title">Restablecer pin de acceso</string>
 </resources>
