--- a/app/src/main/res/values-fr/access_pin.xml
+++ b/app/src/main/res/values-fr/access_pin.xml
@@ -6,4 +6,5 @@
     <string name="text_confirm_pin_access_required">Vous devez confirmer le code d\'accès</string>
     <string name="text_access_pin_not_match">La broche d\'accès ne correspond pas</string>
     <string name="text_access_pin_length">La broche d\'accès doit contenir 4 chiffres</string>
+    <string name="text_reset_access_pin_title">Pin Réinitialiser Accès</string>
 </resources>
