--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -52,7 +52,7 @@
     <string name="text_preview_my_message">Salut</string>
     <string name="text_preview_incoming_message">Bonjour, comment allez-vous?</string>
     <string name="text_display_name">Affichage du nom (en option)</string>
-    <string name="text_nickname_not_contain_enough_char">Le surnom doit contenir au moins 2 caractères.</string>
+    <string name="text_nickname_not_contain_enough_char">Le surnom doit contenir au moins 5 caractères.</string>
     <string name="text_empty_state_conversation_title">Démarrer une conversation</string>
     <string name="text_empty_state_conversation_description">Communiquez avec vos contacts de manière sécurisée et privée</string>
     <string name="text_empty_state_friendship_title">Demandes d\'amis</string>
@@ -69,4 +69,6 @@
     <string name="text_update_message">Version %1$s est maintenant disponible sur l\'App Store</string>
     <string name="text_update">Mettre à jour</string>
     <string name="text_explanation_camera_to_receive_calls">NapoleoN a besoin d\'accéder à la caméra et d\'un microphone pour faire et recevoir des appels</string>
+    <string name="text_twentyfour_hours">24 heures</string>
+    <string name="text_access">ACCÈS</string>
 </resources>
