--- a/app/src/main/res/values-fr/security_settings.xml
+++ b/app/src/main/res/values-fr/security_settings.xml
@@ -8,5 +8,6 @@
     <string name="text_account_recovery_information">Informations de récupération de compte</string>
     <string name="text_allow_download_attachments">Autoriser le téléchargement des pièces jointes envoyées</string>
     <string name="text_unlock_options">Déverrouillez les options</string>
-    <string name="text_message_self_destruct_time_not_send">Messages temps autodétruisent échoué</string>
+    <string name="text_message_self_destruct_time_not_send">Temps Destruct et les messages non lus échoué</string>
+    <string name="text_conversation">CONVERSATION</string>
 </resources>
