--- a/app/src/main/res/values-fr/self_destruct_time.xml
+++ b/app/src/main/res/values-fr/self_destruct_time.xml
@@ -17,5 +17,5 @@
     <string name="text_every_twelve_hours">12 heures</string>
     <string name="text_every_one_day">1 jour</string>
     <string name="text_info_conversation_message_self_destruction">Les messages envoyés dans cette conversation seront supprimés après l\'heure sélectionnée.</string>
-    <string name="text_info_message_autodestruction_time_failed_messages">Les messages envoyés par nos conversations qui ne parviennent pas à leur destination seront supprimés après le temps sélectionné</string>
+    <string name="text_info_message_autodestruction_time_failed_messages">Les messages envoyés dans des conversations qui ne parviennent pas à leur destination ou sont lus non, seront supprimés après le temps sélectionné</string>
 </resources>
