--- a/app/src/main/res/values-it/access_pin.xml
+++ b/app/src/main/res/values-it/access_pin.xml
@@ -6,4 +6,5 @@
     <string name="text_confirm_pin_access_required">È necessario confermare il pin di accesso</string>
     <string name="text_access_pin_not_match">Il pin di accesso non corrisponde</string>
     <string name="text_access_pin_length">Il pin di accesso deve contenere 4 numeri</string>
+    <string name="text_reset_access_pin_title">Pin di reset di accesso</string>
 </resources>
