--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -52,7 +52,7 @@
     <string name="text_preview_my_message">Ciao</string>
     <string name="text_preview_incoming_message">Ciao come stai</string>
     <string name="text_display_name">Nome visualizzato (opzionale)</string>
-    <string name="text_nickname_not_contain_enough_char">Il nickname deve contenere almeno 2 caratteri.</string>
+    <string name="text_nickname_not_contain_enough_char">Il nickname deve contenere almeno 5 caratteri.</string>
     <string name="text_empty_state_conversation_title">Inizia una conversazione</string>
     <string name="text_empty_state_conversation_description">Comunicare con i tuoi contatti in modo sicuro e privato</string>
     <string name="text_empty_state_friendship_title">Richieste di amicizia</string>
@@ -69,4 +69,6 @@
     <string name="text_update_message">Version (%1$s) è ora disponibile su App Store</string>
     <string name="text_update">Aggiornare</string>
     <string name="text_explanation_camera_to_receive_calls">NapoleoN ha bisogno di accedere alla videocamera e microfono per effettuare e ricevere chiamate</string>
+    <string name="text_twentyfour_hours">24 ore</string>
+    <string name="text_access">ACCESSO</string>
 </resources>
