--- a/app/src/main/res/values-it/register.xml
+++ b/app/src/main/res/values-it/register.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_terms_and_conditions_line_one">Facendo clic su Registrazione, si accetta il</string>
+    <string name="text_terms_and_conditions_line_one">Per rendere il clic su Avanti, accettare la</string>
     <string name="text_terms_and_conditions_line_two">termini, condizioni e politiche sulla privacy.</string>
     <string name="text_nickname_required">Il soprannome è obbligatorio.</string>
     <string name="text_nickname_must_not_contain_space">Non può contenere spazi vuoti</string>
     <string name="text_cant_contain_special_characters">Non può contenere caratteri speciali</string>
     <string name="text_nickname_contain_at_least_one_number">Deve contenere almeno un numero</string>
+    <string name="text_nickname_not_contain_enough_char_and_number">Il soprannome deve contenere almeno quattro caratteri e un numero</string>
+    <string name="text_nickname_contain_at_least_one_letter">Il soprannome deve contenere almeno una lettera</string>
 </resources>
