--- a/app/src/main/res/values-it/security_settings.xml
+++ b/app/src/main/res/values-it/security_settings.xml
@@ -8,5 +8,6 @@
     <string name="text_account_recovery_information">Informazioni sul recupero dell\'account</string>
     <string name="text_allow_download_attachments">Consenti download allegati inviati</string>
     <string name="text_unlock_options">Opzioni di sblocco</string>
-    <string name="text_message_self_destruct_time_not_send">Tempo i messaggi di autodistruzione non è riuscita</string>
+    <string name="text_message_self_destruct_time_not_send">Tempo Destruct e non letti messaggi non riusciti</string>
+    <string name="text_conversation">CONVERSAZIONE</string>
 </resources>
