--- a/app/src/main/res/values-it/time_access_pin.xml
+++ b/app/src/main/res/values-it/time_access_pin.xml
@@ -8,5 +8,5 @@
     <string name="text_one_hour">1 ora</string>
     <string name="text_one_day">1 giorno</string>
     <string name="text_never">mai</string>
-    <string name="text_desc_pin_locked_time">Il PIN di accesso è richiesto dopo il tempo selezionato è trascorso e l\'applicazione è in background</string>
+    <string name="text_desc_pin_locked_time">Il PIN di accesso è richiesto dopo il tempo selezionato trascorso e l\'applicazione è chiusa o in background.</string>
 </resources>
