--- a/app/src/main/res/values-pt/access_pin.xml
+++ b/app/src/main/res/values-pt/access_pin.xml
@@ -6,4 +6,5 @@
     <string name="text_confirm_pin_access_required">Você deve confirmar o pino de acesso</string>
     <string name="text_access_pin_not_match">O pino de acesso não corresponde</string>
     <string name="text_access_pin_length">O pino de acesso deve conter 4 números</string>
+    <string name="text_reset_access_pin_title">Pin Acesso Redefinir</string>
 </resources>
