--- a/app/src/main/res/values/access_pin.xml
+++ b/app/src/main/res/values/access_pin.xml
@@ -5,5 +5,6 @@
     <string name="text_access_pin_required">The access pin can\'t be empty</string>
     <string name="text_confirm_pin_access_required">You must confirm the access pin</string>
     <string name="text_access_pin_not_match">The access pin does not match</string>
-    <string name="text_access_pin_length">The access pin must contain 4 number</string>
+    <string name="text_access_pin_length">The access pin must contain 4 numbers</string>
+    <string name="text_reset_access_pin_title">Reset access pin</string>
 </resources>
