--- a/app/src/main/res/layout/custom_view_numeric_keyboard.xml
+++ b/app/src/main/res/layout/custom_view_numeric_keyboard.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -231,7 +232,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:contentDescription="delete"
-                        app:srcCompat="@drawable/ic_backspace_black" />
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/ic_backspace_black"
+                        tools:visibility="visible" />
 
                 </FrameLayout>
 
