--- a/app/src/main/res/layout/enter_code_fragment.xml
+++ b/app/src/main/res/layout/enter_code_fragment.xml
@@ -156,7 +156,7 @@
                             android:layout_gravity="center" />
                     </ViewSwitcher>
 
-                    <com.naposystems.pepito.ui.custom.NumericKeyboardCustomView
+                    <com.naposystems.pepito.ui.custom.numericKeyboard.NumericKeyboardCustomView
                         android:id="@+id/numeric_keyboard"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
