--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -43,7 +43,7 @@
     <string name="text_send_to">Schicken %1$s</string>
     <string name="text_error_playing_audio">Ein Fehler ist auf das Spiel Audio aufgetreten</string>
     <string name="text_attachment_document_name">Dokument.%1$s</string>
-    <string name="text_alert_failure">Advertencia</string>
+    <string name="text_alert_failure">Warnung</string>
     <plurals name="text_selected">
         <item quantity="one">%d ausgewählt</item>
         <item quantity="other">%d ausgewählt</item>
