--- a/app/src/main/res/values-it/register_recovery_account.xml
+++ b/app/src/main/res/values-it/register_recovery_account.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="text_recovery_account_false">Non si dispone di informazioni di ripristino account registrato</string>
     <string name="text_recovery_account_ok">Hai già registrato informazioni per il recupero dell\'account, la modifica eliminerà le informazioni precedenti.</string>
+    <string name="text_terms_and_conditions_line_one_register_recovery_account">Allo scatto fare in Registrati / Modifica, accettare la</string>
 </resources>
