--- a/app/src/main/res/values-pt/register_recovery_account.xml
+++ b/app/src/main/res/values-pt/register_recovery_account.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="text_recovery_account_false">Você não tem informações de recuperação de conta registrada</string>
     <string name="text_recovery_account_ok">Você já registrou as informações para recuperação da conta. A edição descartará as informações anteriores.</string>
+    <string name="text_terms_and_conditions_line_one_register_recovery_account">No clique fazer em Registrar / Editar, aceitar o</string>
 </resources>
