--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -60,7 +60,7 @@
     <string name="text_unblock_contact">Unblock Contact</string>
     <string name="text_attachment_document_name">Document.%1$s</string>
     <string name="text_status_limit">4 custom states are allowed; Removes one previously stored to add new one</string>
-    <string name="text_alert_failure">Advertencia</string>
+    <string name="text_alert_failure">Warning</string>
     <string name="text_preview_self_destruct_time_my_message" translatable="false">04:52</string>
     <string name="text_preview_self_destruct_time_incoming_message" translatable="false">00:24</string>
     <string name="text_preview_date_message" translatable="false">20/04/2020 10:34 p. m.</string>
