--- a/app/src/main/res/values/register_recovery_account.xml
+++ b/app/src/main/res/values/register_recovery_account.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="text_recovery_account_false">You do not have registered account recovery information</string>
     <string name="text_recovery_account_ok">You have already registered information for account recovery, editing will discard previous information.</string>
+    <string name="text_terms_and_conditions_line_one_register_recovery_account">At the click do in Register / Edit, accept the</string>
 </resources>
